spec/fixtures/syntax_errors/good.rb
class Good
  def beautiful_syntax
    "there's nothing wrong with this file"
  end
end


